--- a/.github/workflows/web-app-upload.yml
+++ b/.github/workflows/web-app-upload.yml
@@ -24,7 +24,7 @@ jobs:
         aws-region: us-east-1
 
     - name: Login to Amazon ECR
-      id: login-ecr
+      id: login-ecr-public
       uses: aws-actions/amazon-ecr-login@v1
       with:
         registry-type: public
