--- a/.github/workflows/web-app-upload.yml
+++ b/.github/workflows/web-app-upload.yml
@@ -36,6 +36,7 @@ jobs:
         REGISTRY_ALIAS: ablachowicz-public-ecr-reg
         ECR_REPOSITORY: ggoldmann_s3_web
         IMAGE_TAG: ${{ github.sha }}
+        LOG_LEVEL: debug
       run: |
         docker buildx build --platform=linux/amd64  -t $ECR_REGISTRY/$REGISTRY_ALIAS/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$REGISTRY_ALIAS/$ECR_REPOSITORY:$IMAGE_TAG
