Add version to Parameter store

--- a/.github/workflows/web-app-upload.yml
+++ b/.github/workflows/web-app-upload.yml
@@ -40,3 +40,10 @@ jobs:
         LOG_LEVEL: debug
       run: |
         docker buildx build --platform=linux/amd64  -t $ECR_REGISTRY/$REGISTRY_ALIAS/$ECR_REPOSITORY:$IMAGE_TAG . --push
+    - name: Add hello SecureString to SSM
+      uses: dwardu89/aws-ssm-parameter-store@latest
+      with:
+        ssm-path: "/ggoldmann-upskil-version/s3"
+        ssm-value: ${{ github.sha }}
+        aws-region: eu-central-1
+        ssm-value-type: "String"
